# loan_approval_prediction

./: .gitignore  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
src/loan_approval/: cli.py  config.py  predict_cli.py
src/loan_approval/data/: loader.py  schema.py
src/loan_approval/features/: preprocessing.py
src/loan_approval/models/: model_io.py  predict.py  train.py
test/: sample.json  sample_train.csv
